# skills

./: .gitignore  CLAUDE.md  LICENSE  README.md  skills-lock.json
.claude/: settings.json
.tick/: config.md  learnings.md
.tick/activity/: activity.jsonl
.tick/issues/: 1kk.json  2bv.json  2vi.json  4zz.json  6ew.json  7rc.json  ahh.json  ayw.json  c04.json  c8u.json  fhe.json  g1x.json  hdv.json  jon.json  mll.json  opz.json  ost.json  pl0.json  rcs.json  vd4.json  vj3.json  xsl.json
docs/ideas/: repo-wiki.md
repo-wiki/: INDEX.md
repo-wiki/architecture/: INDEX.md  overview.md
repo-wiki/constraints/: INDEX.md  repo-wiki-stdlib-only.md  skill-requires-skill-md.md
repo-wiki/conventions/: INDEX.md  adding-a-skill.md
repo-wiki/decisions/: 0001-skills-are-distributable-packages.md  0002-repo-wiki-design-principles.md  0003-zero-dependency-python-stdlib.md  0004-vendor-recall-no-skill-deps.md  0005-apply-and-report-not-propose.md  0006-vendored-install-dirs-tracked.md  0007-tg-read-cursor-client-side.md  INDEX.md
repo-wiki/glossary/: INDEX.md  glossary.md
repo-wiki/product/: INDEX.md  overview.md
skills/agent-screencast/: Makefile  SKILL.md  agent-screencast.py  pyproject.toml
skills/agent-screencast/samples/: hackernews.json
skills/agent-screencast/src/agent_screencast/: __init__.py  assembly.py  cli.py  models.py  narration.py  pipeline.py  recorder.py
skills/claude-code-tutor/: SKILL.md  curriculum.md
skills/clone-website/: SKILL.md  TEST-TODOS.md
skills/effect/: SKILL.md
skills/gws-slides/: SKILL.md
skills/lore/: SKILL.md
(+65 files in other folders)
