[project]
name = "agent-screencast"
version = "0.1.0"
description = "Record narrated, captioned video demos of web applications"
readme = "README.md"
authors = [
    { name = "Peter Engelbrecht", email = "peter@engelbrecht.dk" }
]
requires-python = ">=3.12"
dependencies = [
    "edge-tts>=7.2.8",
]

[project.scripts]
agent-screencast = "agent_screencast.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
